<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settingsItem"
        android:checkable="false"
        android:icon="@mipmap/ic_action_play_over_video"
        android:title="@string/videoPlayer"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/savedMacItem"
        android:title="@string/mac_addr"
        app:showAsAction="never" />
    <item
        android:id="@+id/ImageItem"
        android:icon="@mipmap/ic_action_picture"
        android:title="@string/ImageReview"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/about1Item"
        android:title="@string/about_app"
        android:visible="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about2Item"
        android:title="@string/about_app1"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/AutoScanItem"
        android:checkable="true"
        android:title="@string/autoScan"
        android:visible="true" />
    <item
        android:id="@+id/DirectConnectItem"
        android:checkable="true"
        android:title="@string/direct"
        android:visible="true" />
    <item
        android:id="@+id/ListViewItem"
        android:icon="@mipmap/ic_action_camera"
        android:title="@string/cameras"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/ListView1Item"
        android:title="@string/Immersive_sample" />
    <item
        android:id="@+id/speechTextItem"
        android:title="@string/speechText" />
    <item
        android:id="@+id/speechText2Item"
        android:title="@string/speechText2" />
    <item
        android:id="@+id/FileManagerItem"
        android:title="@string/filemanager" />
    <item
        android:id="@+id/LocationItem"
        android:title="@string/location_text" />
    <item
        android:id="@+id/SensorItem"
        android:title="@string/sensors" />
    <item
        android:id="@+id/BatteryItem"
        android:title="@string/battery_info" />
    <item
        android:id="@+id/GridViewItem"
        android:title="@string/gridview"/>

</menu>