<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/report_menu_item1"
        android:title="@string/report_item1"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/report_item1_subitem1"
                android:title="@string/report_font_size"
                app:showAsAction="never" >
            <menu>
                <item
                    android:id="@+id/report_item1_subitem11"
                    android:title="@string/report_font_10"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/report_item1_subitem12"
                    android:title="@string/report_font_12"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/report_item1_subitem13"
                    android:title="@string/report_font_14"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/report_item1_subitem14"
                    android:title="@string/report_font_16"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/report_item1_subitem15"
                    android:title="@string/report_font_18"
                    app:showAsAction="never" />
            </menu></item>
            <item
                android:id="@+id/report_item1_subitem2"
                android:title="@string/report_font_color"
                app:showAsAction="never" >
                <menu>
                    <item
                        android:id="@+id/report_item1_subitem21"
                        android:title="@string/report_fontcolor_black"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/report_item1_subitem22"
                        android:title="@string/report_fontcolor_yellow"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/report_item1_subitem23"
                        android:title="@string/report_fontcolor_red" />
                </menu>
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/report_menu_item2"
        android:title="@string/report_item2"
        app:showAsAction="never" />
    <item
        android:id="@+id/report_menu_item3"
        android:title="@string/report_item3"
        app:showAsAction="never" />
</menu>